[project]
name = "databricks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.63.0",
    "databricks-sqlalchemy>=2.0.7",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
]
